Fix the row vertical alignment.

--- a/src/app/users/user-list/user-list.css
+++ b/src/app/users/user-list/user-list.css
@@ -56,7 +56,7 @@ button {
       @apply max-h-[calc(100vh-20rem)] min-h-75 overflow-y-auto;
 
       .row {
-        @apply flex flex-1 h-10;
+        @apply flex flex-1 h-10 items-center;
 
         .col-data {
           @apply flex h-8 items-center pl-4 inline-block overflow-hidden whitespace-nowrap text-ellipsis;
